# steno

./: .gitignore  README.md  dev.sh  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1772176643459-f0110ebb01156.mjs  vite.test.config.ts
.git_corrupted_backup/: COMMIT_EDITMSG  FETCH_HEAD  config  index  packed-refs
.git_corrupted_backup/logs/: HEAD
.git_corrupted_backup/objects/pack/: pack-d664860c05d4b0855304d596fef8d7418cf6c042.idx  pack-d664860c05d4b0855304d596fef8d7418cf6c042.pack
.git_corrupted_backup/refs/heads/: main
spec/: steno_task_tracker.md
spec/Always-On Desktop Runtime/Background run mode (menubar-tray + headless hotkey capture)/: HLD.md  LLD.md
spec/Steno - Reusable Components/: LLD.md
spec/Steno - Reusable Components/CODIN-200 Extract shared audio capture engine from Steno/: LLD.md
spec/Steno - Reusable Components/CODIN-201 Extract shared global hotkey subsystem from Steno/: LLD.md
spec/Steno - Reusable Components/CODIN-202 Extract shared overlay runtime module from Steno/: LLD.md
spec/Steno - Reusable Components/CODIN-203 Extract shared interim-live transcript pipeline from Steno/: LLD.md
src/: App.tsx  OverlayApp.tsx  main.tsx  styles.css  tauri.ts  types.ts
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_capture.rs  lib.rs  main.rs  model_download.rs  overlay_runtime.rs  post_process.rs  readiness.rs  runtime.rs  shortcut.rs  vad.rs
target-check.backup/: .rustc_info.json
(+21 files in other folders)
