[package]
name = "steno"
version = "0.1.0"
description = "Steno"
authors = ["karthik"]
edition = "2021"
default-run = "steno"

[lib]
name = "steno_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
chrono = "0.4"
cpal = "0.16.0"
handy-keys = "0.2.0"
hf-hub = "0.4"
hound = "3.5.1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9.1", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-log = "2.7.1"
tauri-plugin-macos-permissions = "2.3.0"
thiserror = "2.0"
transcriber-core = { path = "../../rust-transcriber/crates/transcriber-core" }
